    - Cosmetic display improvements in VPS IP addresses under the VPS
    installation tab (alternatecolor is now correct, using td instead of th).
    - last_expiry_date in the completedorders table is now of type "text" as
    it should be to handle multple renew.
    - Added --exclude=subdomains.aufs when calculating disk usage stats.
  * Updated fr debconf template thanks to Christian Perrier (Closes: #640472)
  * Updated de debconf template thanks to Helge Krutzmann (Closes: #640237)
  * Updated se debconf template thanks to Martin Bagge (Closes: #640044)
  * Updated ru debconf template thanks to Yuri Kozlov (Closes: #639429)

 -- Thomas Goirand <zigo@debian.org>  Sat, 10 Sep 2011 23:34:35 +0800

dtc (0.34.2-1) unstable; urgency=low

  * New upstream version correcting:
    - README.Debian now advertize for the correct shell command to has existing
    admin passwords.
    - Fixed a syntax error in the sed command of update_sbox_bootstrap_copy,
    also now using --force-yes when updating / adding packages.
    - Fixed the path of top_bad_password.txt in the check_password() function.
    - Now also hash passwords when changed in the "Admin Editor".

 -- Thomas Goirand <zigo@debian.org>  Wed, 24 Aug 2011 16:52:02 +0800

dtc (0.34.1-1) unstable; urgency=high

  * New upstream version with lots of security fixes:
    - Passwords are now hashed (Closes: #566654).
    - The addrlink is now checked properly, thanks to Ansgar Burchardt
    <ansgar@debian.org> for reporting it (Closes: #637487).
    - Mailing lists tunables options are now correcly escaped before the files
    are being written with an echo, thanks to Ansgar Burchardt
    <ansgar@debian.org> for reporting it (Closes: #637477).
    - Removed sourceless built of OSX mod_log_sql, removed unwanted iglobalwall
    useless files, thanks to Ansgar Burchardt <ansgar@debian.org> for reporting
    it (Closes: #637469).
    - Fixes logPushlet input checking, thanks to Mike O'Connor <stew@vireo.org>